<resources>
    <string name="app_name">Lab1</string>

    <!--登录界面的文字-->
    <string name="login_title">中山大学学生信息系统</string>
    <string name="login_img_content">图片</string>
    <string name="login_id">学号：</string>
    <string name="login_password">密码：</string>
    <string name="login_id_hint">请输入学号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_radio1">学生</string>
    <string name="login_radio2">教师</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="guide">点击登录进入另一个界面</string>
    <string name="iknow"><b>我知道了</b></string>

</resources>
