<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baostorm.lab1.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/login_img_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_id"
        android:textSize="@dimen/login_textSize"
        app:layout_constraintRight_toLeftOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textSize="@dimen/login_textSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/login_id_hint"
        android:textSize="@dimen/login_textSize"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint"
        android:textSize="@dimen/login_textSize"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:text="@string/login"
        android:textSize="@dimen/login_textSize"
        android:textColor="@color/btn_textColor"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="@dimen/login_textSize"
        android:textColor="@color/btn_textColor"
        android:background="@drawable/btn_shape"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginBottom="0dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="20dp">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="@string/login_radio1"
            android:textSize="@dimen/login_textSize"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_radio2"
            android:textSize="@dimen/login_textSize"/>
    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

</android.support.constraint.ConstraintLayout>
